# 2024_Research_Samsa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  test_karchive.cpp
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake  test_karchive
test_build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
unit_tests/tests/: main.cpp
